--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>JS message</title>
     <script>
 
-    window.addEventListener('message', (m,e) => {console.log(m)})
+    window.addEventListener('message', (e) => {console.log("web event")})
 
       function test() {
 
         window.top.postMessage("asd");
 
-        if (window.webkit && window.webkit.messageHandlers && window.webkit.messageHandlers.messageHandler) {
-            window.webkit.messageHandlers.messageHandler.postMessage({"message":"test"});
-        }
+        // if (window.webkit && window.webkit.messageHandlers && window.webkit.messageHandlers.messageHandler) {
+        //     window.webkit.messageHandlers.messageHandler.postMessage({"message":"test"});
+        // }
       }
 
     </script>
